# pybrain

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pybrain_lint.yml  pybrain_test.yml
examples/acquire_fmc_from_micropulse/: acquire_fmc_from_micropulse.py
src/pybrain/: __about__.py  __init__.py
src/pybrain/instruments/: __init__.py  peakndt.py  tpac.py
