[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybrain"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matt Chandler", email = "mc16535@bristol.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Matt Chandler/pybrain#readme"
Issues = "https://github.com/Matt Chandler/pybrain/issues"
Source = "https://github.com/Matt Chandler/pybrain"

[tool.hatch.version]
path = "src/pybrain/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pybrain tests}"

[tool.coverage.run]
source_pkgs = ["pybrain", "tests"]
branch = true
parallel = true
omit = [
  "src/pybrain/__about__.py",
]

[tool.coverage.paths]
pybrain = ["src/pybrain", "*/pybrain/src/pybrain"]
tests = ["tests", "*/pybrain/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
