[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybrain"
dynamic = ["version"]
description = 'A Python library for communicating with ultrasonic acquisition systems in the Bristol UNDT laboratory.'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Matt Chandler", email = "m.chandler@bristol.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "scipy",
  "pyyaml",
  "arim",
]

[project.urls]
Documentation = "https://github.com/mgchandler/pybrain#readme"
Issues = "https://github.com/mgchandler/pybrain/issues"
Source = "https://github.com/mgchandler/pybrain"

[tool.hatch.version]
path = "src/pybrain/__init__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black~=23.0",
  "mypy>=1.10.0",
]

[tool.hatch.envs.lint.scripts]
# typing = "mypy --install-types --non-interactive {args:src/arim tests}"
check = [
  "black --check --diff {args:.}",
]
check-gh = [
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
]

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.coverage.run]
source_pkgs = ["pybrain", "tests"]
branch = true
parallel = true
omit = [
  "src/pybrain/__about__.py",
]

[tool.coverage.paths]
pybrain = ["src/pybrain", "*/pybrain/src/pybrain"]
tests = ["tests", "*/pybrain/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
